==> axoloti/axoloti/firmware/codec_ADAU1961_SAI.c <==
#include "codec_ADAU1961.h"
#include "ch.h"
#include "hal.h"
#include "codec.h"
#include "stm32f4xx.h"
#include "axoloti_board.h"
#include "sysmon.h"
#define STM32_SAI_A_DMA_STREAM STM32_DMA_STREAM_ID(2, 1)
#define STM32_SAI_B_DMA_STREAM STM32_DMA_STREAM_ID(2, 4)
#define SAI_A_DMA_CHANNEL 0
#define SAI_B_DMA_CHANNEL 1
#define STM32_SAI_A_DMA_PRIORITY 1
#define STM32_SAI_B_DMA_PRIORITY 1
#define STM32_SAI_A_IRQ_PRIORITY 2
#define STM32_SAI_B_IRQ_PRIORITY 2

void ADAU1961_ReadRegister6(uint16_t RegisterAddr) {
  msg_t status;
  i2ctxbuf[0] = RegisterAddr >> 8;
  i2ctxbuf[1] = RegisterAddr;
  ADAU1961_I2CStart();
  i2cAcquireBus(&I2CD3);
  status = i2cMasterTransmitTimeout(&I2CD3, ADAU1961_I2C_ADDR, i2ctxbuf, 2,
                                    i2crxbuf, 0, tmo);
  if (status != RDY_OK) {
    CheckI2CErrors();
  }
  status = i2cMasterReceiveTimeout(&I2CD3, ADAU1961_I2C_ADDR, i2crxbuf, 6, tmo);
  if (status != RDY_OK) {
    CheckI2CErrors();
  }
  i2cReleaseBus(&I2CD3);
  ADAU1961_I2CStop();
  chThdSleepMilliseconds(1);
}

void ADAU1961_WriteRegister(uint16_t RegisterAddr, uint8_t RegisterValue) {
  msg_t status;
  i2ctxbuf[0] = RegisterAddr >> 8;
  i2ctxbuf[1] = RegisterAddr;
  i2ctxbuf[2] = RegisterValue;

  ADAU1961_I2CStart();
  i2cAcquireBus(&I2CD3);
  status = i2cMasterTransmitTimeout(&I2CD3, ADAU1961_I2C_ADDR, i2ctxbuf, 3,
                                    i2crxbuf, 0, tmo);
  if (status != RDY_OK) {
    CheckI2CErrors();
    status = i2cMasterTransmitTimeout(&I2CD3, ADAU1961_I2C_ADDR, i2ctxbuf, 3,
                                      i2crxbuf, 0, tmo);
    chThdSleepMilliseconds(1);
  }
  i2cReleaseBus(&I2CD3);
  ADAU1961_I2CStop();
  chThdSleepMilliseconds(1);

  static uint8_t rd;
  rd = ADAU1961_ReadRegister(RegisterAddr);
  if (rd != RegisterValue) {
//    setErrorFlag(ERROR_CODEC_I2C);
  } else {
  }
  chThdSleepMilliseconds(1);
}

void ADAU1961_WriteRegister6(uint16_t RegisterAddr, uint8_t * RegisterValues) {
  msg_t status;
  i2ctxbuf[0] = RegisterAddr >> 8;
  i2ctxbuf[1] = RegisterAddr;
  i2ctxbuf[2] = RegisterValues[0];
  i2ctxbuf[3] = RegisterValues[1];
  i2ctxbuf[4] = RegisterValues[2];
  i2ctxbuf[5] = RegisterValues[3];
  i2ctxbuf[6] = RegisterValues[4];
  i2ctxbuf[7] = RegisterValues[5];
  ADAU1961_I2CStart();
  i2cAcquireBus(&I2CD3);
  status = i2cMasterTransmitTimeout(&I2CD3, ADAU1961_I2C_ADDR, i2ctxbuf, 8,
                                    i2crxbuf, 0, TIME_INFINITE);
  i2cReleaseBus(&I2CD3);
  ADAU1961_I2CStop();
  if (status != RDY_OK) {
    CheckI2CErrors();
  }

  chThdSleepMilliseconds(1);
}
