==> ksoloti/ksoloti/firmware/codec_ADAU1961_SAI.c <==
#include "codec_ADAU1961.h"
#include "ch.h"
#include "hal.h"
#include "codec.h"
#include "stm32f4xx.h"
#include "stm32f4xx_hal_i2c.h"
#include "axoloti_board.h"
#include "sysmon.h"
#define ADAU1961_I2C_ADDR 0x38 /* (0x70>>1) */
#define TIMEOUT 1000000
#define STM32_SAI_A_DMA_STREAM STM32_DMA_STREAM_ID(2, 1)
#define STM32_SAI_B_DMA_STREAM STM32_DMA_STREAM_ID(2, 4)
#define SAI_A_DMA_CHANNEL 0
#define SAI_B_DMA_CHANNEL 1
#define STM32_SAI_A_DMA_PRIORITY 1
#define STM32_SAI_B_DMA_PRIORITY 1
#define STM32_SAI_A_IRQ_PRIORITY 2
#define STM32_SAI_B_IRQ_PRIORITY 2

void ADAU1961_WriteRegister(uint16_t RegisterAddr, uint8_t RegisterValue)
{
    // msg_t status;
    i2ctxbuf[0] = RegisterAddr >> 8;
    i2ctxbuf[1] = RegisterAddr;
    i2ctxbuf[2] = RegisterValue;

    chThdSleepMilliseconds(10);

    HAL_StatusTypeDef r = HAL_I2C_Master_Transmit(&ADAU1961_i2c_handle,
        ADAU1961_I2C_ADDR<<1, i2ctxbuf, 3, TIMEOUT);

    if (r != HAL_OK)
    {
        // volatile unsigned int i = r;
        while(1) { }
    }

    chThdSleepMilliseconds(10);
}

void ADAU1961_WriteRegister6(uint16_t RegisterAddr, uint8_t * RegisterValues) {

    // msg_t status;
    i2ctxbuf[0] = RegisterAddr >> 8;
    i2ctxbuf[1] = RegisterAddr;
    i2ctxbuf[2] = RegisterValues[0];
    i2ctxbuf[3] = RegisterValues[1];
    i2ctxbuf[4] = RegisterValues[2];
    i2ctxbuf[5] = RegisterValues[3];
    i2ctxbuf[6] = RegisterValues[4];
    i2ctxbuf[7] = RegisterValues[5];

    HAL_StatusTypeDef r = HAL_I2C_Master_Transmit(&ADAU1961_i2c_handle,
        ADAU1961_I2C_ADDR<<1, i2ctxbuf, 8, TIMEOUT);

    if (r != HAL_OK)
    {
        // volatile unsigned int i = r;
        while(1) { }
    }

    chThdSleepMilliseconds(10);
}

void ADAU1961_ReadRegister6(uint16_t RegisterAddr)
{
    i2ctxbuf[0] = RegisterAddr >> 8;
    i2ctxbuf[1] = RegisterAddr;

    chThdSleepMilliseconds(1);

    HAL_I2C_Master_Transmit(&ADAU1961_i2c_handle, ADAU1961_I2C_ADDR<<1,
        i2ctxbuf, 2, TIMEOUT);

    chThdSleepMilliseconds(1);

    HAL_StatusTypeDef r = HAL_I2C_Master_Receive(&ADAU1961_i2c_handle,
        (ADAU1961_I2C_ADDR<<1)+1, i2crxbuf, 6, TIMEOUT);

    if (r != HAL_OK)
    {
        // volatile unsigned int i = r;
        while(1) { }
    }
}
